# yt-insight

./: .gitignore  README.md  pyproject.toml
yt_insight/: bot.py  main.py
